src/objects/SSC_L3SubMetric__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SSC_SubMetric__c</fullName>
        <label>Supplier Sub Metric</label>
        <referenceTo>SSC_SubMetric__c</referenceTo>
        <relationshipName>SSC_L3SubMetric</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Target_Score__c</fullName>
        <label>Target Score</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Supplier L3 SubMetric</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Target_Score__c</columns>
        <columns>SSC_SubMetric__c</columns>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>L3SubMetric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier L3 SubMetrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>